# cobots

./: .gitignore  LICENSE  README.md  install.bash
ws/: launch.bash
ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws/install/case_bringup/share/case_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws/install/case_bringup/share/case_bringup/cmake/: case_bringupConfig.cmake
ws/install/case_bringup/share/case_bringup/config/: paths.json  scenario_2.rviz  scenario_3.rviz
ws/install/case_bringup/share/case_bringup/launch/: case_r1.launch.py  case_r2.launch.py  case_r3.launch.py  opc_r1.launch.py  opc_r3.launch.py
ws/install/case_scenes/share/case_scenes/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws/install/py_ctrl/share/py_ctrl/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws/log/: latest_build
ws/src/lab/: README.md  send_goal.py  send_to_topic.py
ws/src/lab/src/case_suite/: README.md
ws/src/lab/src/case_suite/case_bringup/: CMakeLists.txt  README.md  package.xml
ws/src/lab/src/case_suite/case_bringup/config/: scenario_1.rviz
ws/src/lab/src/case_suite/case_bringup/launch/: case_r4.launch.py  opc_r2.launch.py  opc_r4.launch.py
ws/src/lab/src/case_suite/case_scenes/: README.md  package.xml  setup.cfg  setup.py
ws/src/lab/src/py_ctrl/: setup.py
ws/src/lab/src/py_ctrl/model/: __main__.py  model.py  operation.py
ws/src/lab/src/py_ctrl/planner/: plan.py
ws/src/lab/src/py_ctrl/predicates/: __main__.py  actions.py  guards.py
(+50 files in other folders)
