<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>case_bringup</name>
  <version>0.0.1</version>
  <description>
    Bringup package task 2.
  </description>

  <author>Endre Erős</author>
  <author email="endree@chalmers.se">Endre Erős</author>

  <maintainer email="endree@chalmers.se">Endre Erős</maintainer>

  <license>no_license</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf_tools_msgs</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
